2012-06-22 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 4.7, raised requirement to TYPO3 4.5, resolves #38291
	* Removed some pre-4.5 code, corrected phpDocs, removed obsolete code

2012-04-19 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.3.0

2012-03-20 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added possibility to configure preview for "Save and view" action, resolves #34594
	* Changed code to delegate creation of empty data structure to providers, resolves #10980

2012-02-06 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.2.0

2012-01-30 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Implemented partial refactoring of tx_displaycontroller::main(), resolves #33527
	* Improved check for debugger class existence, resolves #33528
	* Added cloning of secondary provider to avoid prodivers overriding each other, resolves #33529

2012-01-21 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Moved debug output to a separate class, made it configurable, resolves #33360

2012-01-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Removed all mentions of contexts from the manual, updated the hooks list, resolves #33223
	* Added Kint to dump debug data instead of t3lib_utility_Debug::debug(), resolves #33174

2012-01-13 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Enhanced error reporting, resolves #1695
	* Implemented new base class for pi-based controllers, resolves #33187

2012-01-12 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Implemented new message queue API, resolves #33149

2012-01-08 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Implemented initialization of components using the new Tesseract API, resolves #33050

2011-12-28 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Changed compatibility check between Primary Data Provider and Data Consumer, resolves #32863

2011-08-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.1.0
